Fixed z-index issues

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,6 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100vh;
+}
+
+.android {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 .content {
@@ -10,7 +17,7 @@
   align-items: center;
   gap: 0.4rem;
   width: 100%;
-  height: 27rem;
+  height: 100%;
 }
 
 .flightcardcontent {
