--- a/src/app/ui/scanbar/Scanbar.module.css
+++ b/src/app/ui/scanbar/Scanbar.module.css
@@ -5,4 +5,5 @@
     align-items: center;
     align-self: stretch;
     background: #232323;
+    z-index: 1001;
 }
